--- a/R_src/bibliography.bib
+++ b/R_src/bibliography.bib
@@ -40,6 +40,26 @@
   year={2013},
   publisher={Academic Press}
 }
+@article{dupleix2013,
+  title={Mid-infrared absorption properties of green wood},
+  author={Dupleix, Anna and Meneses, Domingos De Sousa and Hughes, Mark and Marchal, R{\'e}my},
+  journal={Wood science and technology},
+  volume={47},
+  number={6},
+  pages={1231--1241},
+  year={2013},
+  publisher={Springer}
+}
+@article{howard2013,
+  title={IR radiation from trees to a ski run: A case study},
+  author={Howard, Rosie and Stull, Roland},
+  journal={Journal of applied meteorology and climatology},
+  volume={52},
+  number={7},
+  pages={1525--1539},
+  year={2013}
+}
+
 
 
 
